# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":bigtable_emulator_common.bzl", "bigtable_emulator_common_hdrs", "bigtable_emulator_common_srcs")
load(":bigtable_emulator_programs.bzl", "bigtable_emulator_programs")
load(":bigtable_emulator_test_common.bzl", "bigtable_emulator_test_common_hdrs", "bigtable_emulator_test_common_srcs")
load(":bigtable_emulator_unit_tests.bzl", "bigtable_emulator_unit_tests")
load(":funcs.bzl", "gen_cc_tests")

cc_library(
    name = "bigtable_emulator_common",
    srcs = bigtable_emulator_common_srcs,
    hdrs = bigtable_emulator_common_hdrs,
    deps = [
        "@google_cloud_cpp//google/cloud/bigtable:google_cloud_cpp_bigtable",
    ],
)

cc_binary(
    name = "emulator",
    srcs = bigtable_emulator_programs,
    deps = [
        ":bigtable_emulator_common",
        "@com_github_grpc_grpc//:grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_protobuf//:protobuf",
        "@google_cloud_cpp//:grpc_utils",
        "@google_cloud_cpp//google/cloud/bigtable:google_cloud_cpp_bigtable",
    ],
)

gen_cc_tests(
    srcs = bigtable_emulator_unit_tests,
    deps = [
        ":bigtable_emulator_common",
        "@com_github_grpc_grpc//:grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@google_cloud_cpp//:grpc_utils",
        "@google_cloud_cpp//google/cloud/bigtable:google_cloud_cpp_bigtable",
        "@google_cloud_cpp//google/cloud/testing_util:google_cloud_cpp_testing",
    ],
)

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)
