# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bigtable Emulator."""
module(
    name = "bigtable_emulator",
    version = "1.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "abseil-cpp", version = "20240722.1", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "29.4", repo_name = "com_google_protobuf")
bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "nlohmann_json", version = "3.11.3", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "curl", version = "8.8.0.bcr.3", repo_name = "com_github_curl_curl")
bazel_dep(name = "crc32c", version = "1.1.0", repo_name = "com_github_google_crc32c")
bazel_dep(name = "opentelemetry-cpp", version = "1.19.0", repo_name = "io_opentelemetry_cpp")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.5.1")

bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.2", dev_dependency = True, repo_name = "com_google_benchmark")
bazel_dep(name = "yaml-cpp", version = "0.8.0", dev_dependency = True, repo_name = "com_github_jbeder_yaml_cpp")
bazel_dep(name = "pugixml", version = "1.15", dev_dependency = True, repo_name = "com_github_zeux_pugixml")

# Our `curl.BUILD` file uses these.
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "c-ares", version = "1.19.1.bcr.1", repo_name = "com_github_cares_cares")

# Pin this to fix a break in bazel/deps-cache.py
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1", dev_dependency = True, repo_name = "com_envoyproxy_protoc_gen_validate")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "googleapis", version = "0.0.0", repo_name = "com_google_googleapis")
archive_override(
    module_name = "googleapis",
    integrity = "sha256-JLDsEVCdmGOdD0NcdYyYdYvwXlaFeGT6lSp9jkYjCaY=",
    patch_strip = 1,
    patches = ["//bazel:googleapis.modules.patch"],
    strip_prefix = "googleapis-6e5b74e4f8194149542348a40881a5d792a59a0e",
    urls = [
        "https://github.com/googleapis/googleapis/archive/6e5b74e4f8194149542348a40881a5d792a59a0e.tar.gz",
    ],
)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    grpc = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "google_cloud_cpp",
    commit = "fbc58d69eabbfdd773b92838e731842b8019c5dc",
    remote = "https://github.com/googleapis/google-cloud-cpp.git",
    patches = ["//bazel:google_cloud_cpp.patch"],
    patch_args = ["-p1"],
)

git_repository(
    name = "fmtlog",
    remote = "https://github.com/MengRao/fmtlog.git",
    commit = "308b2317d4e9c21d3b203d104007fde127dcdbfa",
    build_file_content = """
cc_library(
    name = "fmtlog",
    visibility = ["//visibility:public"],
    hdrs = glob(["*.h"]),
    includes = glob(["*.h"]),
    defines = [],
    deps = ["@fmt"],
)
""",
)

bazel_dep(name = "rocksdb", version = "9.11.2")
bazel_dep(name = "fmt", version = "12.1.0")

# FIXME: switch to hedronvision/bazel-compile-commands-extractor once https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219 lands
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor.git",
    commit = "02d15621b528efd877f5d5657c4b738523a0eb17",
)